--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,10 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Depends: 
     tidyverse
+Imports: 
+    parsnip,
+    recipes,
+    rsample,
+    tune,
+    workflows,
+    yardstick
