--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Depends: 
+    R (>= 2.10),
     tidyverse
 Imports: 
     broom,
@@ -26,3 +27,4 @@ Suggests:
 Config/testthat/edition: 3
 URL: https://github.com/JMartinezGarcia/TidyML
 BugReports: https://github.com/JMartinezGarcia/TidyML/issues
+LazyData: true
