Added pipe operator and hyperparametersNN object

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,10 @@ Imports:
     rsample,
     tune,
     workflows,
-    yardstick
+    workflowsets,
+    yardstick,
+    R6, 
+    magrittr
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
