--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,9 @@ Imports:
     workflowsets,
     yardstick,
     R6, 
-    magrittr
+    magrittr,
+    vip,
+    glue
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
