--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,8 @@ Imports:
     R6, 
     magrittr,
     vip,
-    glue
+    glue,
+    fmsb
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
