--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,12 @@ Imports:
     magrittr,
     vip,
     glue,
-    fmsb
+    fmsb,
+    tidyr,
+    ggpubr,
+    innsight,
+    torch,
+    shapr
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
