remove residue files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,9 @@ export(preprocessing)
 export(sensitivity_analysis)
 export(show_results)
 importFrom(magrittr,"%>%")
+importFrom(stats,as.formula)
+importFrom(stats,coef)
+importFrom(stats,model.frame)
+importFrom(stats,predict)
+importFrom(stats,sd)
+importFrom(stats,update)
