--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,10 +13,12 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Depends: 
-    R (>= 2.10),
-    tidyverse
+    R (>= 2.10)
 Imports: 
-    broom,
+    R6,
+    tidyr,
+    tidyselect,
+    magrittr,
     dials,
     parsnip,
     recipes,
@@ -24,23 +26,25 @@ Imports:
     tune,
     workflows,
     yardstick,
-    R6, 
-    magrittr,
     vip,
     glue,
-    tidyr,
     ggpubr,
     innsight,
     torch,
     shapr,
     DiagrammeR,
-    ggbeeswarm,
+    ggbeeswarm
+Suggests: 
+    testthat (>= 3.0.0),
     brulee,
     ranger,
     kernlab,
-    xgboost
-Suggests: 
-    testthat (>= 3.0.0)
+    xgboost,
+    dplyr,
+    ggplot2,
+    rlang,
+    tibble,
+    tidyverse
 Config/testthat/edition: 3
 URL: https://github.com/JMartinezGarcia/TidyML
 BugReports: https://github.com/JMartinezGarcia/TidyML/issues
