correct family description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,15 @@
 Package: TidyML
 Title: Machine Learning Modelling For Everyone
 Version: 0.0.0.9000
-Authors@R: c(person(given   = "Javier", familiy = "Martínez García",
+Authors@R: c(person(given   = "Javier", family = "Martínez García",
                     role    = c("aut", "cre"), 
                     email   = "javier.nezcia@gmail.com",
                     comment = c(ORCID = "0009-0007-7861-5274")),
-             person(given = "Juan José", familiy = "Montaño Moreno",
+             person(given = "Juan José", family = "Montaño Moreno",
                     role  = "ctb", 
                     email = "juanjo.montano@uib.es",
                     comment = c(ORCID = "0000-0002-1116-1964")),
-             person(given = "Albert", familiy = "Sesé",
+             person(given = "Albert", family = "Sesé",
                     role  = "ctb", 
                     email = "albert.sese@uib.es",
                     comment = c(ORCID = "0000-0003-3771-1749")))
