--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -48,23 +48,24 @@ Imports:
     glue,
     ggpubr,
     innsight,
-    torch,
     shapr,
     DiagrammeR,
     ggbeeswarm,
     ggplot2,
     stringr,
     sensitivity,
-    brulee,
-    ranger,
-    kernlab,
-    xgboost,
     dplyr,
     rlang,
     tibble,
     tidyverse
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    torch,
+    brulee,
+    ranger,
+    kernlab,
+    xgboost
+    
 Config/testthat/edition: 3
 URL: https://github.com/JMartinezGarcia/TidyML
 BugReports: https://github.com/JMartinezGarcia/TidyML/issues
