--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,7 +22,7 @@ Description: TidyML is a minimalistic library specifically designed to make the 
              interpretation and evaluation of results using Sensitivity Analysis. The TidyML workflow is
              organized into five core steps; preprocessing(), build_model(), fine_tuning(), show_results(),
              and sensitivity_analysis(). These steps correspond, respectively, to data preparation and
-             transformation, model construction, hyperparameter optimization, resuresults presentation, and
+             transformation, model construction, hyperparameter optimization, results presentation, and
              sensitivity analysis. By streamlining these phases, TidyML aims to simplify the implementation
              of ML techniques, allowing analysts and data scientists to focus on extracting actionable insights
              and meaningful patterns from large datasets, in line with the objectives of the KDD process.
@@ -65,7 +65,6 @@ Suggests:
     ranger,
     kernlab,
     xgboost
-    
 Config/testthat/edition: 3
 URL: https://github.com/JMartinezGarcia/TidyML
 BugReports: https://github.com/JMartinezGarcia/TidyML/issues
