--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: TidyML
-Title: Machine Learning Modelling For Everyone
+Title: Machine Learning Modelling for Everyone
 Version: 0.1.0
 Authors@R: c(person(given   = "Javier", family = "Martínez García",
                     role    = c("aut", "cre"), 
@@ -13,7 +13,7 @@ Authors@R: c(person(given   = "Javier", family = "Martínez García",
                     role  = "ctb", 
                     email = "albert.sese@uib.es",
                     comment = c(ORCID = "0000-0003-3771-1749")))
-Description: TidyML is a minimalistic library specifically designed to make the estimation of Machine
+Description: A minimalistic library specifically designed to make the estimation of Machine
              Learning (ML) techniques as easy and accessible as possible, particularly within the framework
              of the Knowledge Discovery in Databases (KDD) process in data mining. The package provides
              all the essential tools needed to efficiently structure and execute each stage of a predictive
