--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: 'TidyML'
+Package: TidyML
 Title: Machine Learning Modelling for Everyone
 Version: 0.1.0
 Authors@R: c(person(given   = "Javier", family = "Martínez García",
@@ -19,11 +19,11 @@ Description: A minimalistic library specifically designed to make the estimation
              all the essential tools needed to efficiently structure and execute each stage of a predictive
              or classification modeling workflow, aligning closely with the fundamental steps of the KDD
              methodology, from data selection and preparation, through model building and tuning, to the
-             interpretation and evaluation of results using Sensitivity Analysis. The TidyML workflow is
+             interpretation and evaluation of results using Sensitivity Analysis. The 'TidyML' workflow is
              organized into five core steps; preprocessing(), build_model(), fine_tuning(), show_results(),
              and sensitivity_analysis(). These steps correspond, respectively, to data preparation and
              transformation, model construction, hyperparameter optimization, results presentation, and
-             sensitivity analysis. By streamlining these phases, TidyML aims to simplify the implementation
+             sensitivity analysis. By streamlining these phases, 'TidyML' aims to simplify the implementation
              of ML techniques, allowing analysts and data scientists to focus on extracting actionable insights
              and meaningful patterns from large datasets, in line with the objectives of the KDD process.
 License: GPL-3
