--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -57,7 +57,8 @@ Imports:
     dplyr,
     rlang,
     tibble,
-    tidyverse
+    tidyverse,
+    patchwork
 Suggests: 
     testthat (>= 3.0.0),
     torch,
