--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,10 +3,10 @@
 S3method(summary,AnalysisObject)
 export("%>%")
 export(build_model)
+export(evaluate_model)
 export(fine_tuning)
 export(preprocessing)
 export(sensitivity_analysis)
-export(show_results)
 importFrom(magrittr,"%>%")
 importFrom(stats,as.formula)
 importFrom(stats,coef)
