plots and tables exports

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,8 +5,32 @@ export("%>%")
 export(build_model)
 export(evaluate_model)
 export(fine_tuning)
+export(plot_calibration_curve)
+export(plot_confusion_matrix)
+export(plot_distribution_by_class)
+export(plot_gain_curve)
+export(plot_integrated_gradients)
+export(plot_lift_curve)
+export(plot_loss_curve)
+export(plot_olden)
+export(plot_pfi)
+export(plot_pr_curve)
+export(plot_residuals_distribution)
+export(plot_roc_curve)
+export(plot_scatter_predicitions)
+export(plot_scatter_residuals)
+export(plot_shap)
+export(plot_sobol_jansen)
+export(plot_tuning_results)
 export(preprocessing)
 export(sensitivity_analysis)
+export(show_best_hyperparameters)
+export(table_evaluation_results)
+export(table_integrated_gradients_results)
+export(table_olden_results)
+export(table_pfi_results)
+export(table_shap_results)
+export(table_sobol_jansen_results)
 importFrom(magrittr,"%>%")
 importFrom(stats,as.formula)
 importFrom(stats,coef)
