added graph_nn documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(plot_calibration_curve)
 export(plot_confusion_matrix)
 export(plot_distribution_by_class)
 export(plot_gain_curve)
+export(plot_graph_nn)
 export(plot_integrated_gradients)
 export(plot_lift_curve)
 export(plot_loss_curve)
