ready to release

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,7 @@ export(plot_pfi)
 export(plot_pr_curve)
 export(plot_residuals_distribution)
 export(plot_roc_curve)
-export(plot_scatter_predicitions)
+export(plot_scatter_predictions)
 export(plot_scatter_residuals)
 export(plot_shap)
 export(plot_sobol_jansen)
@@ -31,6 +31,7 @@ export(table_olden_results)
 export(table_pfi_results)
 export(table_shap_results)
 export(table_sobol_jansen_results)
+importFrom(R6,R6Class)
 importFrom(magrittr,"%>%")
 importFrom(stats,as.formula)
 importFrom(stats,coef)
