Added hstat and pdp plot document

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(summary,AnalysisObject)
 export("%>%")
+export(MLwrap_tutorial)
 export(build_model)
 export(fine_tuning)
 export(plot_calibration_curve)
@@ -13,6 +14,7 @@ export(plot_integrated_gradients)
 export(plot_lift_curve)
 export(plot_loss_curve)
 export(plot_olden)
+export(plot_partial_dependence_plot)
 export(plot_pfi)
 export(plot_pr_curve)
 export(plot_residuals_distribution)
