Remove hstat dependency. Added pdp and ale plots

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -59,8 +59,7 @@ Imports:
     tibble,
     patchwork,
     cli,
-    scales,
-    hstats
+    scales
 Suggests: 
     testthat (>= 3.0.0),
     torch,
