Added table and plots documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,8 +29,10 @@ export(preprocessing)
 export(sensitivity_analysis)
 export(table_best_hyperparameters)
 export(table_evaluation_results)
+export(table_h2_total)
 export(table_integrated_gradients_results)
 export(table_olden_results)
+export(table_pairwise_interaction)
 export(table_pfi_results)
 export(table_shap_results)
 export(table_sobol_jansen_results)
